# apis-instance-mine

./: .gitignore  manage.py  pyproject.toml
.github/: auto-deploy-values.yaml
.github/workflows/: deploy.yml  ruff-format.yml
apis_import/: apps.py  utils.py
apis_import/management/commands/: import_data.py
apis_ontology/: apps.py  asgi.py  forms.py  models.py  settings.py  settings_dev.py  tables.py  urls.py  wsgi.py
apis_ontology/migrations/: 0001_initial.py  0002_alter_anhaengervon_old_id_alter_ausbildungan_old_id_and_more.py  0002_alter_ereignis_alternative_namen_and_more.py  0003_alter_ausbildungan_typ_alter_versionausbildungan_typ.py  0003_beruf_old_id_alter_beruf_name_and_more.py  0004_auto_20250822_1252.py  0004_institution_alternative_namen_ort_alternative_namen_and_more.py  0005_erwaehntin_typ_versionerwaehntin_typ_versionwerk_typ_and_more.py  0005_versionanhaengervon_versionausbildungan_and_more.py  0006_alter_ort_feature_code_alter_versionort_feature_code.py  0007_alter_institution_typ_alter_positionan_position_and_more.py  0008_alter_institution_typ_alter_versioninstitution_typ.py
apis_ontology/templates/columns/: relation.html
mine/: asgi.py  settings.py  settings_dev.py  urls.py  wsgi.py
mine_edit/: apps.py  forms.py  urls.py  utils.py  views.py
mine_edit/templates/mine_edit/: create_relations_form.html
mine_frontend/: autocompletes.py  crispy_overrides.py  filters.py  forms.py  helpers.py  mixins.py  settings.py  tables.py  urls.py  utils.py  views.py
mine_frontend/templatetags/: facet_tags.py  mine_extras.py
resources/: OEFOS2012_DE_CTI.txt  combined_relations.csv  labels_mine_export_20250807.csv  optionen_inst_hierarchie.csv  optionen_mitglied.csv  position_inst_relations.csv
scripts/: change_position_klasse_pres.py
(+64 files in other folders)
